# Segmentation-Client-E-commerce

./: .gitignore  environment.yml  pyproject.toml  requirements.txt
configs/: params.yaml
data/raw/: SOURCE.txt
notebooks/: 00_data_acquisition.ipynb  01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb
outputs/models/: kmeans_model.joblib  rfm_scaler.joblib
outputs/reports/: model_comparison.csv
src/customer_segmentation/: __init__.py
src/customer_segmentation/data/: __init__.py  loader.py
src/customer_segmentation/evaluation/: __init__.py  metrics.py
src/customer_segmentation/features/: __init__.py  rfm.py
src/customer_segmentation/models/: __init__.py  clustering.py
src/customer_segmentation/visualization/: __init__.py  plots.py
tests/: test_rfm.py
